crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__local_root_only_all.snap
---
source: crates/alder-parse/src/item/import.rs
description: import ~.*
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Import(
            Import {
                path: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: ModulePath {
                        root: Local(
                            Region {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                        ),
                        segments: [],
                    },
                },
                tail: All(
                    Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                ),
            },
        ),
    },
}
