crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__names_tail_next_line.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import @alder/http\n    .{ get, Request }\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 22,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Import(
            Import {
                path: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 19,
                        },
                    },
                    value: ModulePath {
                        root: Package {
                            author: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 14,
                                    },
                                },
                                value: "alder",
                            },
                            package: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 19,
                                    },
                                },
                                value: "http",
                            },
                        },
                        segments: [],
                    },
                },
                tail: Names(
                    [
                        ImportName {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 11,
                                    },
                                },
                                value: "get",
                            },
                            alias: None,
                        },
                        ImportName {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 20,
                                    },
                                },
                                value: "Request",
                            },
                            alias: None,
                        },
                    ],
                ),
            },
        ),
    },
}
