crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__package_all.snap
---
source: crates/alder-parse/src/item/import.rs
description: import @alder/http.*
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 21,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Import(
            Import {
                path: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 19,
                        },
                    },
                    value: ModulePath {
                        root: Package {
                            author: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 14,
                                    },
                                },
                                value: "alder",
                            },
                            package: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 19,
                                    },
                                },
                                value: "http",
                            },
                        },
                        segments: [],
                    },
                },
                tail: All(
                    Region {
                        start: Position {
                            line: 1,
                            column: 19,
                        },
                        end: Position {
                            line: 1,
                            column: 21,
                        },
                    },
                ),
            },
        ),
    },
}
